--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^1.9.0",
+        "compression": "^1.8.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "helmet": "^7.1.0",
+        "express-rate-limit": "^7.5.0",
+        "helmet": "^7.2.0",
         "morgan": "^1.10.0",
         "portfinder": "^1.0.32"
     },
