--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "axios": "^1.9.0",
         "compression": "^1.8.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
         "express": "^4.18.2",
         "express-rate-limit": "^7.5.0",
         "helmet": "^7.2.0",
+        "image-size": "^2.0.2",
         "morgan": "^1.10.0",
         "portfinder": "^1.0.32"
     },
