--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
         "compression": "^1.8.0",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
-        "express": "^4.18.2",
+        "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "helmet": "^7.2.0",
         "image-size": "^2.0.2",
         "morgan": "^1.10.0",
+        "node-fetch": "^3.3.2",
         "portfinder": "^1.0.32"
     },
     "devDependencies": {
